--- a/erong/src/main/webapp/index.html
+++ b/erong/src/main/webapp/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html ng-app>
+<html>
 <head>
-<script src="scripts/angular.min.js"></script>
+
 </head>
 <body>
 	Your name:
-	<input type="text" ng-model="yourname" placeholder="World">
-	<hr>
-	Hello {{yourname || 'World'}}!
 </body>
 </html>
